RL - new design for the guide details screen, with new assets. many changes to view controllers to do with allow the uinavigation bar to appear.

--- a/Gyde/Gyde-Info.plist
+++ b/Gyde/Gyde-Info.plist
@@ -45,5 +45,10 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>FreightSans Bold.ttf</string>
+		<string>FreightSans Medium.ttf</string>
+	</array>
 </dict>
 </plist>
