--- a/Gyde/Gyde-Info.plist
+++ b/Gyde/Gyde-Info.plist
@@ -30,13 +30,20 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>2</string>
 	<key>FacebookAppID</key>
 	<string>502827299731831</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSMainNibFile</key>
 	<string>MainWindow</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>FreightSans Bold.ttf</string>
+		<string>FreightSans Medium.ttf</string>
+	</array>
+	<key>UIPrerenderedIcon</key>
+	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
@@ -44,11 +51,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-	</array>
-	<key>UIAppFonts</key>
-	<array>
-		<string>FreightSans Bold.ttf</string>
-		<string>FreightSans Medium.ttf</string>
 	</array>
 </dict>
 </plist>
